# trace-history

./: .gitignore  README.md  __main__.py  pyproject.toml  requirements-lock.txt  requirements.txt  trace-history.spec
doc/procedure-for-set-files/: procedure-for-set-files.md
doc/procedure-for-set-files/images/: final-setup.xcf
doc/validation/timing/: README.md  requirements-lock.txt
doc/validation/timing/sweep_count_1000/: time-statistics.yaml
doc/validation/timing/sweep_count_2/: time-statistics.yaml
doc/validation/timing/sweep_count_200/: time-statistics.yaml
doc/validation/timing/sweep_count_2000/: sweep-statistics.yaml  time-statistics.yaml
doc/validation/timing/sweep_count_500/: sweep-statistics.yaml
doc/validation/timing/timing/: helpers.py  io.py
docs/validation/timing/: __main__.py  requirements.txt  trace-history-loops.bat
docs/validation/timing/sweep_count_1000/: sweep-statistics.yaml
docs/validation/timing/sweep_count_2/: sweep-statistics.yaml
docs/validation/timing/sweep_count_200/: sweep-statistics.yaml
example/: README.md  __main__.py  requirements.txt
scripts/: .boilerplate.bat  build  build.bat  clean  clean.bat  install  install.bat  start  start.bat  test  test.bat  zip
tests/: test_example.py  test_trace_history.py
tests/mock/: numpy.py  pathlib.py  vna.py
trace_history/: __init__.py  command_line.py  default_time.py  main.py  measure_and_save.py  timestamp.py  trace_history.py  version.py
trace_history/save/: __init__.py  frequency.py  helpers.py  settings.py  timing_info.py  trace_data.py
(+134 files in other folders)
