[build-system]
requires      = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[project]
name = "trace_history"
authors = [{name  = "Nick Lalic", email = "nick.lalic@rsa.rohde-schwarz.com"}]
description     = "This is a python command line utility for performing Rohde & Schwarz (R&S) Vector Network Analyzer (VNA) measurements with Trace History."
requires-python = ">=3.5"
keywords = [
  "rohde",
  "schwarz",
  "vector",
  "network",
  "analyzer",
  "VNA",
  "trace",
  "history",
  "trace-history"
]
license      = { file = "LICENSE.txt" }
classifiers  = [
  "Programming Language :: Python :: 3"
]
dependencies = [
  "rohdeschwarz >=1.9.2.dev1, <2",
  "si-prefix >=1.2, <2"
]
dynamic = [
  "readme",
  "version"
]


[project.optional-dependencies]
dev = [
  "pyinstaller >=6.1",
  "ddt >=1.6, <2"
]


[project.scripts]
trace-history = "trace_history.main:main"


[tool.setuptools.dynamic]
readme  = { file = ["README.md"] }
version = { attr = "trace_history.VERSION" }
